# JARVIS-ASSISTANT

./: .bashrc  .env.template  .gitignore  GEMINI.md  README.md  docker-compose.yml  enroll_fresh.py  install_daemon.py  launcher.py  main.py  package.json  pyproject.toml  readme.md  requirements.txt  run_final_test.py  scratch_test.py  setup.py  start.sh  start_jarvis.bat  test_gemini_direct.py  test_jarvis_e2e.py  test_output.txt  ui.py
.claude/: settings.local.json
_maintenance_scripts/: check_errors.txt  check_errors_utf8.txt  debug_log.txt  fix_e501.py  fix_pyre.py  fix_pyre2.py  flake8.txt  flake8_actions.txt  flake8_actions2.txt  flake8_check.txt  flake8_errors.txt  flake8_final.txt  flake8_final_utf8.txt  flake8_utf8.txt  patch.py
actions/: browser_agent.py  browser_control.py  browser_core.py  browser_extraction.py  browser_interaction.py  browser_navigation.py  browser_research.py  cmd_control.py  code_helper.py  computer_control.py  computer_settings.py  dashboard.py  desktop.py  dev_agent.py  file_controller.py  flight_finder.py  open_app.py  reminder.py  screen_processor.py  send_message.py  study_mode.py  task_analysis.py  weather_report.py  web_search.py  youtube_video.py
agent/: code_intelligence.py  error_handler.py  executor.py  planner.py  task_queue.py
api/: auth.py  config.py  database.py  server.py
backend/: __init__.py  main.py
config/: api_keys.json  face_config.py
core/: adaptive_threshold.py  enhanced_enrollment.py  enrollment_validator.py  face_auth.py  face_utils.py  liveness_engine.py  prompt.txt
electron-app/: .env.example  (+9 more)
(+417 files in other folders)
